--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -8,9 +8,9 @@
 
 <app-my-projects></app-my-projects>
 
-<router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
-<app-feedback></app-feedback>
+<app-feedback></app-feedback> -->
 
 <app-contact-me></app-contact-me>
 
