--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,27 @@
 <section>
   <div class="overlay-footer">
-    <div class="footer-text" >
+    <div class="logo-section-2">
+      <div class="left-section">
+        <div class="logo-container">
+          <img
+            class="logo-1"
+            src="../../../../assets/icon/Logo icon-Dark.png"
+            alt="Logo-1"
+          />
+          <img
+            class="logo-2"
+            src="../../../../assets/icon/Logo icon-Dark 2.png"
+            alt="Logo-2"
+          />
+        </div>
+        <div class="titel-container">
+          <h3>M.Schneemann</h3>
+          <h4>{{ "ABF.DEVELOPER" | translate }}</h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-text">
       <p>{{ "ABF.LEGAL_NOTICE" | translate }}</p>
       <p>© Marvin Schneemann 2025</p>
     </div>
@@ -21,15 +42,82 @@
         </div>
         <div class="titel-container">
           <h3>M.Schneemann</h3>
-          <h4>{{"ABF.DEVELOPER" | translate }}</h4>
+          <h4>{{ "ABF.DEVELOPER" | translate }}</h4>
         </div>
       </div>
     </div>
 
     <div class="footer-icon">
-      <img src="../../assets/icon/Github button-dark.png" alt="Github" />
-      <img src="../../assets/icon/Email button-dark.png" alt="Email" />
-      <img src="../../assets/icon/Linkedin button-dark.png" alt="LinkedIn" />
+      @for (icon of contactIcons; track icon.id) {
+      <img
+        [src]="icon.current"
+        (mouseenter)="onContactHover(icon.id)"
+        (mouseleave)="onContactLeave(icon.id)"
+        [alt]="icon.id + ' icon'"
+      />
+      }
+    </div>
+  </div>
+</section>
+
+<section class="section-two">
+  <div class="overlay-footer">
+    <div class="logo-section-2">
+      <div class="left-section">
+        <div class="logo-container">
+          <img
+            class="logo-1"
+            src="../../../../assets/icon/Logo icon-Dark.png"
+            alt="Logo-1"
+          />
+          <img
+            class="logo-2"
+            src="../../../../assets/icon/Logo icon-Dark 2.png"
+            alt="Logo-2"
+          />
+        </div>
+        <div class="titel-container">
+          <h3>M.Schneemann</h3>
+          <h4>{{ "ABF.DEVELOPER" | translate }}</h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="logo-section">
+      <div class="left-section">
+        <div class="logo-container">
+          <img
+            class="logo-1"
+            src="../../../../assets/icon/Logo icon-Dark.png"
+            alt="Logo-1"
+          />
+          <img
+            class="logo-2"
+            src="../../../../assets/icon/Logo icon-Dark 2.png"
+            alt="Logo-2"
+          />
+        </div>
+        <div class="titel-container">
+          <h3>M.Schneemann</h3>
+          <h4>{{ "ABF.DEVELOPER" | translate }}</h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-icon">
+      @for (icon of contactIcons; track icon.id) {
+      <img
+        [src]="icon.current"
+        (mouseenter)="onContactHover(icon.id)"
+        (mouseleave)="onContactLeave(icon.id)"
+        [alt]="icon.id + ' icon'"
+      />
+      }
+    </div>
+
+    <div class="footer-text">
+      <p>{{ "ABF.LEGAL_NOTICE" | translate }}</p>
+      <p>© Marvin Schneemann 2025</p>
     </div>
   </div>
 </section>
