--- a/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.scss
+++ b/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.scss
@@ -326,6 +326,11 @@ button {
 }
 
 @media (max-width: 550px) {
+
+  section{
+    height: 980px;
+  }
+
   .secend-section {
     width: 320px;
   }
