--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<app-above-the-fold></app-above-the-fold> 
+<!-- <app-above-the-fold></app-above-the-fold> 
 
 <app-navbar></app-navbar>
 
@@ -8,7 +8,7 @@
 
 <app-my-projects></app-my-projects>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
 
 <app-feedback></app-feedback>
 
