--- a/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.html
+++ b/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.html
@@ -67,7 +67,7 @@
 
   <div class="technologie-section">
     <div class="secend-section">
-      <h4 class="title">Join</h4>
+      <h4 class="title">Project 4</h4>
       <span> Duration 3 weeks </span>
 
       <div class="justatest">
