--- a/src/app/landing-page/main-page/feedback/feedback.component.html
+++ b/src/app/landing-page/main-page/feedback/feedback.component.html
@@ -1,20 +1,21 @@
 <h2>Need a teamplay? Here what my colleagues said about me</h2>
 
 <div class="overlay">
-  <div #slider class="secend-Overlay embla__viewport">
-    <div class="embla__container">
-      @for (person of people; track person.name) {
-        <div class="feedback-card embla__slide">
-          <div class="feedback-card-one"></div>
-          <div class="feedback-card-two"></div>
-          <h3>{{ person.name }}</h3>
-          <h5><span> Project </span> {{ person.project }}</h5>
-          <div class="project-name">
-            <p>{{ person.text }}</p>
-          </div>
-          <a [href]="person.profileLink" target="_blank">LinkedIn Profile</a>
+  <div class="secend-Overlay" #scrollContainer>
+    <div class="feedback-scroll-container">
+      <div
+        class="feedback-card"
+        *ngFor="let person of people; trackBy: trackByName"
+      >
+        <div class="feedback-card-one"></div>
+        <div class="feedback-card-two"></div>
+        <h3>{{ person.name }}</h3>
+        <h5><span>Project</span> {{ person.project }}</h5>
+        <div class="project-name">
+          <p>{{ person.text }}</p>
         </div>
-      }
+        <a [href]="person.profileLink" target="_blank">LinkedIn Profile</a>
+      </div>
     </div>
   </div>
 </div>
