--- a/src/app/landing-page/main-page/abilities/abilities.component.scss
+++ b/src/app/landing-page/main-page/abilities/abilities.component.scss
@@ -238,7 +238,6 @@ span {
     height: 220px;
     justify-content: center;
     align-items: center;
-    gap: 1;
   }
 
   .icon-img {
@@ -262,5 +261,8 @@ span {
   }
   .about-to-text{
     width: 278px;
+  }
+  h2{
+    font-size: 36px;
   }
 }
